[package]
name = "mcan"
version = "0.1.0"
edition = "2021"
description = "Unofficial MCAN Hardware Abstraction Layer"
keywords = ["no-std", "can"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrepitAB/mcan"
documentation = "https://docs.rs/crate/mcan/"
readme = "README.md"

[dependencies]
bitfield = "0.14"
embedded-hal = "0.2"
fugit = "0.3.5"
generic-array = "0.14"
vcell = "0.1"
