[package]
name = "mcan-core"
version = "0.2.2"
edition = "2021"
description = "Unofficial MCAN Hardware Abstraction Layer (integration layer)"
keywords = ["no-std", "can"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrepitAB/mcan"
documentation = "https://docs.rs/crate/mcan-core/"
readme = "../README.md"

[dependencies]
fugit = "0.3"
