[package]
name = "mcan"
version = "0.6.0"
edition = "2021"
description = "Unofficial MCAN Hardware Abstraction Layer"
keywords = ["no-std", "can"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrepitAB/mcan"
documentation = "https://docs.rs/crate/mcan/"
readme = "../README.md"

[dependencies]
mcan-core = "0.2"
bitfield = "0.14"
embedded-can = "0.4"
fugit = "0.3.5"
generic-array = "0.14"
nb = "1.0"
vcell = "0.1"
